sql-analyzer-plugin/antlr/PostgreSql/.antlr/PostgreSqlGrammarParser.java
// Generated from /home/feriano/Documentos/Felipe/F/UNAL/Lenguajes/Repos/SQL-Analyzer/sql-analyzer-plugin/antlr/PostgreSql/PostgreSqlGrammar.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PostgreSqlGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VARCHAR=1, INT=2, NUMERIC=3, TEXT=4, DATE=5, TIMESTAMP=6, BOOL=7, SERIAL=8, 
		BIGSERIAL=9, UUID=10, JSON=11, JSONB=12, BYTEA=13, FLOAT=14, REAL=15, 
		DOUBLE=16, DECIMAL=17, MONEY=18, SMALLINT=19, BIGINT=20, CHAR=21, BIT=22, 
		INTERVAL=23, AUTOINCREMENT=24, SELECT=25, WITH=26, FROM=27, WHERE=28, 
		GROUP=29, BY=30, HAVING=31, ORDER=32, ASC=33, DESC=34, AND=35, OR=36, 
		NOT=37, AS=38, ON=39, IS=40, NULL=41, LIKE=42, BETWEEN=43, NATURAL=44, 
		CASE=45, WHEN=46, THEN=47, ELSE=48, END=49, CREATE=50, FUNCTION=51, RETURNS=52, 
		INNER=53, LEFT=54, RIGHT=55, FULL=56, JOIN=57, COUNT=58, SUM=59, AVG=60, 
		MIN=61, MAX=62, ARRAY_AGG=63, STRING_AGG=64, BOOL_AND=65, BOOL_OR=66, 
		VAR_POP=67, VAR_SAMP=68, STDDEV_POP=69, STDDEV_SAMP=70, OFFSET=71, FETCH=72, 
		FIRST=73, ROWS=74, ONLY=75, DISTINCT=76, TABLE=77, UNIQUE=78, PRIMARY=79, 
		KEY=80, DEFAULT=81, FOREIGN=82, REFERENCES=83, INDEX=84, DROP=85, ALTER=86, 
		RENAME=87, CONSTRAINT=88, TO=89, ADD=90, COLUMN=91, DATABASE=92, IF=93, 
		EXISTS=94, STRING=95, NUMBER=96, STAR=97, COMMA=98, SEMI=99, DOT=100, 
		LPAREN=101, RPAREN=102, EQ=103, NEQ=104, LT=105, LTE=106, GT=107, GTE=108, 
		PLUS=109, MINUS=110, SLASH=111, INSERT=112, INTO=113, VALUES=114, UPDATE=115, 
		SET=116, DELETE=117, LINE_COMMENT=118, BLOCK_COMMENT=119, WS=120, ID=121;
	public static final int
		RULE_initial = 0, RULE_sql_stmt = 1, RULE_select_stmt = 2, RULE_function_stmt = 3, 
		RULE_data_type = 4, RULE_function_params = 5, RULE_func_body = 6, RULE_create_table_stmt = 7, 
		RULE_column_def = 8, RULE_column_constraint = 9, RULE_table_constraint = 10, 
		RULE_column_list = 11, RULE_create_index_stmt = 12, RULE_create_database_stmt = 13, 
		RULE_drop_stmt = 14, RULE_alter_table_stmt = 15, RULE_alter_table_action = 16, 
		RULE_insert_stmt = 17, RULE_insert_values = 18, RULE_update_stmt = 19, 
		RULE_update_assignment = 20, RULE_delete_stmt = 21, RULE_value = 22, RULE_limit_offset_clause = 23, 
		RULE_with_clause = 24, RULE_cte = 25, RULE_result_column = 26, RULE_join_clause = 27, 
		RULE_standard_join = 28, RULE_natural_join = 29, RULE_join_type = 30, 
		RULE_natural_join_type = 31, RULE_table_reference = 32, RULE_table_name = 33, 
		RULE_alias = 34, RULE_group_by_clause = 35, RULE_group_by_item = 36, RULE_order_by_clause = 37, 
		RULE_order_by_item = 38, RULE_agg_func = 39, RULE_expr = 40, RULE_arith_expr = 41, 
		RULE_atom = 42, RULE_case_expr = 43, RULE_when_clause = 44, RULE_function_call = 45, 
		RULE_function_arg = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"initial", "sql_stmt", "select_stmt", "function_stmt", "data_type", "function_params", 
			"func_body", "create_table_stmt", "column_def", "column_constraint", 
			"table_constraint", "column_list", "create_index_stmt", "create_database_stmt", 
			"drop_stmt", "alter_table_stmt", "alter_table_action", "insert_stmt", 
			"insert_values", "update_stmt", "update_assignment", "delete_stmt", "value", 
			"limit_offset_clause", "with_clause", "cte", "result_column", "join_clause", 
			"standard_join", "natural_join", "join_type", "natural_join_type", "table_reference", 
			"table_name", "alias", "group_by_clause", "group_by_item", "order_by_clause", 
			"order_by_item", "agg_func", "expr", "arith_expr", "atom", "case_expr", 
			"when_clause", "function_call", "function_arg"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'*'", "','", "';'", "'.'", "'('", "')'", "'='", "'!='", "'<'", 
			"'<='", "'>'", "'>='", "'+'", "'-'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VARCHAR", "INT", "NUMERIC", "TEXT", "DATE", "TIMESTAMP", "BOOL", 
			"SERIAL", "BIGSERIAL", "UUID", "JSON", "JSONB", "BYTEA", "FLOAT", "REAL", 
			"DOUBLE", "DECIMAL", "MONEY", "SMALLINT", "BIGINT", "CHAR", "BIT", "INTERVAL", 
			"AUTOINCREMENT", "SELECT", "WITH", "FROM", "WHERE", "GROUP", "BY", "HAVING", 
			"ORDER", "ASC", "DESC", "AND", "OR", "NOT", "AS", "ON", "IS", "NULL", 
			"LIKE", "BETWEEN", "NATURAL", "CASE", "WHEN", "THEN", "ELSE", "END", 
			"CREATE", "FUNCTION", "RETURNS", "INNER", "LEFT", "RIGHT", "FULL", "JOIN", 
			"COUNT", "SUM", "AVG", "MIN", "MAX", "ARRAY_AGG", "STRING_AGG", "BOOL_AND", 
			"BOOL_OR", "VAR_POP", "VAR_SAMP", "STDDEV_POP", "STDDEV_SAMP", "OFFSET", 
			"FETCH", "FIRST", "ROWS", "ONLY", "DISTINCT", "TABLE", "UNIQUE", "PRIMARY", 
			"KEY", "DEFAULT", "FOREIGN", "REFERENCES", "INDEX", "DROP", "ALTER", 
			"RENAME", "CONSTRAINT", "TO", "ADD", "COLUMN", "DATABASE", "IF", "EXISTS", 
			"STRING", "NUMBER", "STAR", "COMMA", "SEMI", "DOT", "LPAREN", "RPAREN", 
			"EQ", "NEQ", "LT", "LTE", "GT", "GTE", "PLUS", "MINUS", "SLASH", "INSERT", 
			"INTO", "VALUES", "UPDATE", "SET", "DELETE", "LINE_COMMENT", "BLOCK_COMMENT", 
			"WS", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PostgreSqlGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PostgreSqlGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitialContext extends ParserRuleContext {
		public List<Sql_stmtContext> sql_stmt() {
			return getRuleContexts(Sql_stmtContext.class);
		}
		public Sql_stmtContext sql_stmt(int i) {
			return getRuleContext(Sql_stmtContext.class,i);
		}
		public InitialContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initial; }
	}

	public final InitialContext initial() throws RecognitionException {
		InitialContext _localctx = new InitialContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_initial);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			sql_stmt();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1125900007505920L) != 0) || ((((_la - 85)) & ~0x3f) == 0 && ((1L << (_la - 85)) & 5502926851L) != 0)) {
				{
				{
				setState(95);
				sql_stmt();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Sql_stmtContext extends ParserRuleContext {
		public Select_stmtContext select_stmt() {
			return getRuleContext(Select_stmtContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(PostgreSqlGrammarParser.SEMI, 0); }
		public Function_stmtContext function_stmt() {
			return getRuleContext(Function_stmtContext.class,0);
		}
		public Create_table_stmtContext create_table_stmt() {
			return getRuleContext(Create_table_stmtContext.class,0);
		}
		public Create_index_stmtContext create_index_stmt() {
			return getRuleContext(Create_index_stmtContext.class,0);
		}
		public Create_database_stmtContext create_database_stmt() {
			return getRuleContext(Create_database_stmtContext.class,0);
		}
		public Drop_stmtContext drop_stmt() {
			return getRuleContext(Drop_stmtContext.class,0);
		}
		public Alter_table_stmtContext alter_table_stmt() {
			return getRuleContext(Alter_table_stmtContext.class,0);
		}
		public Insert_stmtContext insert_stmt() {
			return getRuleContext(Insert_stmtContext.class,0);
		}
		public Update_stmtContext update_stmt() {
			return getRuleContext(Update_stmtContext.class,0);
		}
		public Delete_stmtContext delete_stmt() {
			return getRuleContext(Delete_stmtContext.class,0);
		}
		public Sql_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_stmt; }
	}

	public final Sql_stmtContext sql_stmt() throws RecognitionException {
		Sql_stmtContext _localctx = new Sql_stmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sql_stmt);
		try {
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				select_stmt();
				setState(102);
				match(SEMI);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				function_stmt();
				setState(105);
				match(SEMI);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(107);
				create_table_stmt();
				setState(108);
				match(SEMI);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(110);
				create_index_stmt();
				setState(111);
				match(SEMI);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(113);
				create_database_stmt();
				setState(114);
				match(SEMI);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(116);
				drop_stmt();
				setState(117);
				match(SEMI);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(119);
				alter_table_stmt();
				setState(120);
				match(SEMI);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(122);
				insert_stmt();
				setState(123);
				match(SEMI);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(125);
				update_stmt();
				setState(126);
				match(SEMI);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(128);
				delete_stmt();
				setState(129);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Select_stmtContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(PostgreSqlGrammarParser.SELECT, 0); }
		public TerminalNode FROM() { return getToken(PostgreSqlGrammarParser.FROM, 0); }
		public Table_referenceContext table_reference() {
			return getRuleContext(Table_referenceContext.class,0);
		}
		public TerminalNode STAR() { return getToken(PostgreSqlGrammarParser.STAR, 0); }
		public TerminalNode WITH() { return getToken(PostgreSqlGrammarParser.WITH, 0); }
		public With_clauseContext with_clause() {
			return getRuleContext(With_clauseContext.class,0);
		}
		public TerminalNode DISTINCT() { return getToken(PostgreSqlGrammarParser.DISTINCT, 0); }
		public List<Join_clauseContext> join_clause() {
			return getRuleContexts(Join_clauseContext.class);
		}
		public Join_clauseContext join_clause(int i) {
			return getRuleContext(Join_clauseContext.class,i);
		}
		public TerminalNode WHERE() { return getToken(PostgreSqlGrammarParser.WHERE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Group_by_clauseContext group_by_clause() {
			return getRuleContext(Group_by_clauseContext.class,0);
		}
		public Order_by_clauseContext order_by_clause() {
			return getRuleContext(Order_by_clauseContext.class,0);
		}
		public List<Result_columnContext> result_column() {
			return getRuleContexts(Result_columnContext.class);
		}
		public Result_columnContext result_column(int i) {
			return getRuleContext(Result_columnContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PostgreSqlGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PostgreSqlGrammarParser.COMMA, i);
		}
		public Select_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_stmt; }
	}

	public final Select_stmtContext select_stmt() throws RecognitionException {
		Select_stmtContext _localctx = new Select_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_select_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITH) {
				{
				setState(133);
				match(WITH);
				setState(134);
				with_clause();
				}
			}

			setState(137);
			match(SELECT);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DISTINCT) {
				{
				setState(138);
				match(DISTINCT);
				}
			}

			setState(150);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STAR:
				{
				setState(141);
				match(STAR);
				}
				break;
			case COUNT:
			case SUM:
			case AVG:
			case MIN:
			case MAX:
			case ARRAY_AGG:
			case STRING_AGG:
			case BOOL_AND:
			case BOOL_OR:
			case VAR_POP:
			case VAR_SAMP:
			case STDDEV_POP:
			case STDDEV_SAMP:
			case LPAREN:
			case ID:
				{
				{
				setState(142);
				result_column();
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(143);
					match(COMMA);
					setState(144);
					result_column();
					}
					}
					setState(149);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(152);
			match(FROM);
			setState(153);
			table_reference();
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 279240769083015168L) != 0)) {
				{
				{
				setState(154);
				join_clause();
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(160);
				match(WHERE);
				setState(161);
				expr(0);
				}
			}

			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUP) {
				{
				setState(164);
				group_by_clause();
				}
			}

			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ORDER) {
				{
				setState(167);
				order_by_clause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_stmtContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(PostgreSqlGrammarParser.CREATE, 0); }
		public TerminalNode FUNCTION() { return getToken(PostgreSqlGrammarParser.FUNCTION, 0); }
		public List<TerminalNode> ID() { return getTokens(PostgreSqlGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PostgreSqlGrammarParser.ID, i);
		}
		public TerminalNode LPAREN() { return getToken(PostgreSqlGrammarParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PostgreSqlGrammarParser.RPAREN, 0); }
		public TerminalNode RETURNS() { return getToken(PostgreSqlGrammarParser.RETURNS, 0); }
		public TerminalNode AS() { return getToken(PostgreSqlGrammarParser.AS, 0); }
		public Func_bodyContext func_body() {
			return getRuleContext(Func_bodyContext.class,0);
		}
		public Function_paramsContext function_params() {
			return getRuleContext(Function_paramsContext.class,0);
		}
		public Function_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_stmt; }
	}

	public final Function_stmtContext function_stmt() throws RecognitionException {
		Function_stmtContext _localctx = new Function_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(CREATE);
			setState(171);
			match(FUNCTION);
			setState(172);
			match(ID);
			setState(173);
			match(LPAREN);
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(174);
				function_params();
				}
			}

			setState(177);
			match(RPAREN);
			setState(178);
			match(RETURNS);
			setState(179);
			match(ID);
			setState(180);
			match(AS);
			setState(181);
			func_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
